--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>드래그 혼자하기</title>
+    <title>제네시스</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
     <link rel="stylesheet" type="text/css" href="./css/style.css">
@@ -261,6 +261,8 @@
                             <a href="#" class="page-btn">06</a>
                             <a href="#" class="page-btn">07</a>
                             <a href="#" class="page-btn">08</a>
+                            <a href="#" class="page-btn">09</a>
+                            <a href="#" class="page-btn">10</a>
                         </div>
                     </div>
                 </div>
